--- a/sohee-cho-wk-two-hw/index.html
+++ b/sohee-cho-wk-two-hw/index.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!DOCTYPE html lang="eng">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Sohee Cho | Week 2 HW</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="style.css">
+    
     </head>
 
     <body>
@@ -98,7 +95,7 @@
                 </fieldset>
         
                 <fieldset>
-                    <button id="subtract" onclick="divideNumsFixed()">Click to Divide (rounded off)</button>
+                    <button id="dividefixed" onclick="divideNumsFixed()">Click to Divide (rounded off)</button>
                     <h3>Result</h3>
                     <span id="result5">Result here</span>
             </fieldset>
@@ -123,6 +120,5 @@
                 </fieldset>
         </div>
 
-        <script src="js/main.js"></script>
+        <script src="main.js"></script>
     </body>
-</html>
